# trading-algos

./: .gitignore  README.md  dummy_data.csv
amt-strategy/: pyrightconfig.json  requirements.txt
binance-crypto/: .env.example  .gitignore  package-lock.json  package.json
bitcoin9to5/: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  bot.js  ecosystem.config.cjs  package-lock.json  package.json
docs/: .gitignore  README.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  source.config.ts  tailwind.config.ts  tsconfig.json
forex-mtf-strategy/: .env.example  .gitignore  README.md  __init__.py  main.py  requirements.txt
jesse-strategies/: .gitignore  dump.rdb
tinga-tinga/: .env.example  .gitignore  README.md  config.json  index.js  package-lock.json  package.json  test.js
trading-algos/: .env.example  .gitignore  README.md  backtest.py  main.py  requirements.txt
trading-algos/forex_mtf_strategy/: README.md  pyproject.toml  requirements.txt
trading-algos/forex_mtf_strategy/src/forex_mtf_strategy/backtest/: feeds.py  run.py  strategy.py
trading-algos/forex_mtf_strategy/src/forex_mtf_strategy/config/: settings.py
trading-algos/forex_mtf_strategy/src/forex_mtf_strategy/data/: loader.py  resampler.py
trading-algos/forex_mtf_strategy/src/forex_mtf_strategy/indicators/: fvg.py  stochrsi.py  supertrend.py  volume_profile.py
trading-algos/forex_mtf_strategy/src/forex_mtf_strategy/strategy/: signal_generator.py
vrvp-strategy/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __main__.py  docker-compose.yml  main.py  (+6 more)
(+169 files in other folders)
